# fspd-TP2-cpp

./: CMakeLists.txt  conanfile.txt
.cache/clangd/index/: catch_main.cpp.936E865DC67E4B04.idx  central.cc.9348A105C6EBC0EC.idx  central_client.cc.2BA0B6A0600C07BB.idx  central_client.hpp.56CB9516DC044535.idx  cli_central.cc.DB860CFA9F36D288.idx  cli_pares.cc.824853D71263A439.idx  constexpr_tests.cpp.6FC38383DB822768.idx  pares_client.cc.2244DF4DEA79D153.idx  pares_client.hpp.B89920E03E93E70A.idx  serv_central.cc.2D462E93F4F730C1.idx  serv_pares.cc.7FD4DEE379484417.idx  server.hpp.C3B4CC05CB60A228.idx  tests.cpp.4E8702B032EAC4C3.idx
include/: central_client.hpp  pares_client.hpp  server.hpp
protos/: CMakeLists.txt  central.proto  common.cmake  pares.proto
src/: CMakeLists.txt  central_client.cc  cli_central.cc  cli_pares.cc  pares_client.cc  serv_central.cc  serv_pares.cc
